disjointed linear bezier splines

--- a/points/Assembly-CSharp.csproj
+++ b/points/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\Point.cs" />
     <Compile Include="Assets\KickScript.cs" />
+    <Compile Include="Assets\Spline.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
